--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -12,3 +12,8 @@
   background-position: center; /* Center the image */
   color: white; /* Optional: Adjust the text color to suit the background */
 }
+
+.center-buttons {
+  text-align: center;
+  margin-top: 10px; /* Optional: Add space above the buttons */
+}
