--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -17,3 +17,30 @@
   text-align: center;
   margin-top: 10px; /* Optional: Add space above the buttons */
 }
+
+.center-text {
+  text-align: center;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.btn-blue {
+  background-color: #007bff;
+  color: white;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.btn:hover {
+  background-color: #0056b3;
+}
