--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -26,7 +26,8 @@
     {{ nav_footer_custom }}
   {% else %}
     <footer class="site-footer">
-      2024 itsneufox. Proudly powered by <a href="https://github.com/just-the-docs/just-the-docs">Just the Docs</a>.
+      &copy; 2024 itsneufox.<br>
+      Powered by <a href="https://github.com/just-the-docs/just-the-docs">Just the Docs</a>.
     </footer>
   {% endif %}
 </div>
