--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -11,3 +11,7 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.site-header {
+  margin-bottom: 20px; /* Adjust this value as needed */
+}
