--- a/_sass/custom/setup.scss
+++ b/_sass/custom/setup.scss
@@ -1,20 +1,20 @@
-$purpleW-000: #7253ed 
-$purpleW-100: #5e41d0 
-$purpleW-200: #4e26af 
-$purpleW-300: #fff 
-$blueW-000: #2c84fa 
-$blueW-100: #2869e6 
-$blueW-200: #264caf 
-$blueW-300: #fff 
-$greenW-000: #41d693 
-$greenW-100: #11b584 
-$greenW-200: #009c7b 
-$greenW-300: #fff 
-$yellowW-000: #ffeb82 
-$yellowW-100: #fadf50 
-$yellowW-200: #f7d12e 
-$yellowW-300: #fff 
-$redW-000: #f77e7e 
-$redW-100: #f96e65 
-$redW-200: #e94c4c 
-$redW-300: #fff 
+$purpleW-000: #7253ed;
+$purpleW-100: #5e41d0;
+$purpleW-200: #4e26af;
+$purpleW-300: #fff;
+$blueW-000: #2c84fa;
+$blueW-100: #2869e6;
+$blueW-200: #264caf;
+$blueW-300: #fff;
+$greenW-000: #41d693;
+$greenW-100: #11b584;
+$greenW-200: #009c7b;
+$greenW-300: #fff;
+$yellowW-000: #ffeb82;
+$yellowW-100: #fadf50;
+$yellowW-200: #f7d12e;
+$yellowW-300: #fff;
+$redW-000: #f77e7e;
+$redW-100: #f96e65;
+$redW-200: #e94c4c;
+$redW-300: #fff;
